--- a/Frontend/.htaccess
+++ b/Frontend/.htaccess
@@ -7,23 +7,19 @@ RewriteRule ^introduce/about_us$ index.php?controller=introduction&action=aboutu
 RewriteRule ^contact$ index.php?controller=contact&action=read
 
 #Rewrite trang danh muc san pham
-RewriteRule ^product/categories/(.*)/(.*)$ index.php?controller=products&action=categories&id=$1&p=$2
 RewriteRule ^product/categories/(.*)$ index.php?controller=products&action=categories&id=$1 [L,QSA]
 
 #Rewrite trang tat ca san pham
 RewriteRule ^product/all$ index.php?controller=products&action=all [L,QSA]
-RewriteRule ^product/all/page/(.*)$ index.php?controller=products&action=all&p=$1
 
 #Rewrite trang collection 
-RewriteRule ^product/collection/(.*)/(.*)$ index.php?controller=products&action=collection&id=$1&p=$2
 RewriteRule ^product/collection/(.*)$ index.php?controller=products&action=collection&id=$1 [L,QSA]
 
 #Rewrite trang chi tiet san pham
 RewriteRule ^product/detail/(.*)$ index.php?controller=products&action=detail&id=$1
 
 #Rewrite trang blog
-RewriteRule ^blog/detail/(.*)$ index.php?controller=blog&action=detail&id=$1
-RewriteRule ^blog/page/(.*)$ index.php?controller=blog&action=read&p=$1
+RewriteRule ^blog/detail/(.*)$ index.php?controller=blog&action=detail&id=$1 [L,QSA]
 
 #Rewrite trang gioi thieu
 RewriteRule ^introduce/chinh_sach_doi_tra$ index.php?controller=introduction&action=returnpolicy
